--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: rgba(50,231,255,0.1);
+    background-color: rgba(50,231,255,0.2);
     position:absolute;
     top:0;
     left:0;
@@ -64,11 +64,32 @@ body {
 
         100%{
             transform:rotate(360deg)
-        }
-    
+       }
+    }
 
+    .navbar{
+        position:relative;
+        z-index: 20;
+        top:4rem;
+        display:flex;
+        justify-content: space-evenly;
+    }
 
-}
+    .navbar-link{
+        font-size: 2.2rem;
+        font-weight: 700;
+        letter-spacing: .2rem;
+        color:#fff;
+        /*change to vertical*/
+        width: 1.5rem;
+        word-wrap:break-word;
+        text-align: center;
+        transition: all 0.5s;
+    }
 
-
+    .navbar-link:hover{
+        width: 15rem;
+        background-color: rgba(255,255,255,0.2);
+        transition: all .5s;
+    }
 /*END OF SECTION 1 */
