--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 .section-1{
     width: 100%;
     height: 100vh;
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     position: relative;
     }
 
@@ -91,5 +91,39 @@ body {
         width: 15rem;
         background-color: rgba(255,255,255,0.2);
         transition: all .5s;
-    }
+
+      }
+
+        .section-1-heading{
+            font-size: 5rem;
+            font-family: "Monoton", cursive;
+            position:absolute;
+            top: 18vw;
+            left: 50%;
+            transform: translateX(-50%);
+            text-shadow: 0.3rem 0.3rem .03rem #888;
+            color:#fff;
+            background-color: #fff
+            width 85rem;
+            text-align: center;
+            padding: 0.8rem 1.6rem;
+            border-radius: 0%8rem;
+            opacity: 0.9;
+        }
+
+
+        .logo{
+            position: absolute;
+            top: 70%;
+            left: 50%;
+            transform: translate(-50%);
+            }
+
+        .logo i{
+            font-size: 15rem;
+            color: rgba(50,231,255,0.8);
+            text-shadow: .1ren .1ren .1rem #ddd
+            -0.1rem -0.1rem 0.2rem #ddd;
+
+        }
 /*END OF SECTION 1 */
