--- a/style.css
+++ b/style.css
@@ -124,6 +124,35 @@ body {
             color: rgba(50,231,255,0.8);
             text-shadow: .1ren .1ren .1rem #ddd
             -0.1rem -0.1rem 0.2rem #ddd;
-
         }
 /*END OF SECTION 1 */
+
+/*SECTION 2*/
+
+.section-2{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;   
+
+}
+
+.section-heading{
+    font-size: 10rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    color:999;
+    text-align: center;
+    opacity: 0.1;
+    text-shadow: 2rem 2rem 4rem #aaa;
+
+}
+
+.customer-img{
+    width: 10rem;
+    height: 10rem;
+    object-fit: cover; 
+}
+
+/*END OF SECTION 2*/
