--- a/style.css
+++ b/style.css
@@ -139,13 +139,14 @@ body {
 }
 
 .section-heading{
-    font-size: 10rem;
+    font-size: 5rem;
     font-weight: bold;
     text-transform: uppercase;
     color:999;
     text-align: center;
     opacity: 0.1;
     text-shadow: 2rem 2rem 4rem #aaa;
+    margin: 8rem  
     }
 /*center customer images*/
     .customers-wrapper{
@@ -153,6 +154,7 @@ body {
         justify-content: space-evenly;
         align-items: center;
         height: 70%;
+       ;
         }
 
 /*Style customer cards*/
@@ -165,23 +167,23 @@ body {
     flex-direction:column;
     align-items: center;
     border-radius: .5rem;
-    padding: 2rem ;
+    padding: 1rem ;
     box-shadow: 1rem 1rem 2rem #ddd,
     -1rem -1rem 2rem #eee;
     transition: box-shadow 0.5s;
 }
 
 .customer:hover{
-    box-shadow: 2rem 2rem 3rem #ddd,
+    box-shadow: 5rem 5rem 5rem #ddd,
     -2rem -2rem 3rem #eee;
 }
 
 .customer:first-child{
-    align-self: flex-end;
+    align-self:flex-end;
 }
 
 .customer:last-child{
-    align-self: flex-start;
+    align-self:flex-start;
 }
 
 .fa-quote-left{
@@ -211,7 +213,7 @@ body {
     height: 10rem;
     object-fit: cover;
     margin: 2rem 0; 
-    border-radius: 5%;
+    border-radius: 50%;
 }
 
 .customer-name{
