--- a/style.css
+++ b/style.css
@@ -20,7 +20,20 @@ html{
 
 body {
     overflow-x:hidden;
+
+   
 }
+
+.section-heading{
+    font-size: 5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    color:999;
+    text-align: center;
+    opacity: 0.1;
+    text-shadow: 2rem 2rem 4rem #aaa;
+    margin: 8rem  
+    }
 
 /*END OF GLOBAL STYLES*/
 
@@ -138,23 +151,14 @@ body {
 
 }
 
-.section-heading{
-    font-size: 5rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    color:999;
-    text-align: center;
-    opacity: 0.1;
-    text-shadow: 2rem 2rem 4rem #aaa;
-    margin: 8rem  
-    }
+
 /*center customer images*/
     .customers-wrapper{
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         height: 70%;
-       ;
+      
         }
 
 /*Style customer cards*/
@@ -221,4 +225,50 @@ body {
     font-weight: 700;
 }
 
+
+
 /*END OF SECTION 2*/
+
+/*SECTION 3*/
+.section-3{
+width: 100%;
+height: 100vh;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+padding: 5rem 0;
+background-color:rgba(50,231,255,0.8) ;
+
+}
+
+.team-member-img{
+    width: 10rem;
+    height: 10rem;
+    object-fit: cover;
+    margin: 2rem 0; 
+    border-radius: 50%;
+    ;
+}
+
+
+
+.team-wrapper{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 70%;
+    
+}
+
+.team-member{
+    width:35rem;
+    background-color: #fffeee;
+    padding: 1rem 1rem 2em 12rem;
+    box-shadow: 1rem 1rem 2rem #ddd, -1rem -1rem 2rem #eee;
+    
+      
+}.story{
+    display: none;
+}
+
+/*END OF SECTION 3*/
