--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body {
 
         .logo i{
             font-size: 15rem;
-            color: rgba(50,231,255,0.8);
+            color: rgba(9, 112, 126, 0.8);
             text-shadow: .1ren .1ren .1rem #ddd
             -0.1rem -0.1rem 0.2rem #ddd;
         }
@@ -166,7 +166,7 @@ body {
 .customer{
     width: 30rem;
     height: 40rem;
-    background-color: #eee;
+    background-color: rgba(50,231,255,0.2);
     display: flex;
     flex-direction:column;
     align-items: center;
@@ -264,11 +264,123 @@ background-color:rgba(50,231,255,0.8) ;
     width:35rem;
     background-color: #fffeee;
     padding: 1rem 1rem 2em 12rem;
-    box-shadow: 1rem 1rem 2rem #ddd, -1rem -1rem 2rem #eee;
-    
-      
-}.story{
-    display: none;
+    box-shadow: 1rem 1rem 2rem #ddd, 
+    -1rem -1rem 2rem #eee;
+    position: relative;
+    opacity: 0.7;
+    transition: opacity 0.5s;
 }
 
+.team-member:hover{
+    opacity:1
+}
+
+.team-member:first-child{
+    align-self: flex-start;
+}
+
+.team-member:last-child{
+    align-self: flex-end;
+}
+    
+
+.team-member-img{
+    width: 100%;
+    border-radius:0.5rem; 
+}
+
+.team-member-name{
+    font-size: 2.3rem;
+    font-weight: 700;
+    color: #796717;
+    margin-top: 2rem;
+}
+      
+.team-member-name span{
+    font-size: 1.7rem;
+}
+
+.team-member-skills{
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0 2rem 0;
+    }
+
+    .team-member-skills li{
+        font-size: 1.5rem;
+        columns: #505050;
+     
+    }
+
+    .projects-btn{
+        background-color: #fab34a;
+        color: #fff;
+        padding: .5rem 1.5rem;
+        border-radius: 5rem;
+        font-size:1.5rem;
+        letter-spacing:0.2rem;
+    }
+
+.story{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(253,69,69,0.9);
+    position: absolute;
+    top:0;
+    left:0;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    transform: scale(0);
+    transform-origin: top-right;
+    border-radius: 50rem 0 50rem 50rem;
+    transition: all 0.5s;
+}
+
+.change.story{
+    transform: scale(1);
+    border-radius: 0;;
+}
+
+.story-btn{
+    width: 4rem;
+    height: 4rem;
+    background-color: #222;
+    position: absolute;
+    top: -1rem;
+    right: -1rem;
+    border-radius: 5rem;
+    display:flex;
+    align-items: center;
+    padding: 0.5rem;
+    cursor: pointer;
+    z-index: 50;
+    transition:transform 0.5s;
+}
+.change.story.btn{
+    transform: rotate(405deg);
+}
+
+.story-btn-line{    
+    width: 100%;
+    height: 0.1rem;
+    background-color: #fff;
+}
+
+.story-heading{
+    font-size: 4rem;
+    font-weight:700;
+    color: #fff;
+    margin-bottom: 2rem;
+    }
+
+    .story-paragraph{
+        font-size: 1.8rem;
+        color: #eee;
+        text-align: justify;
+        letter-spacing: 0.1rem;
+        text-indent: 2rem;
+    }
 /*END OF SECTION 3*/
