--- a/style.css
+++ b/style.css
@@ -13,22 +13,24 @@
     font-weight: 400;
 }
 
+.container { 
+overflow-x: hidden;  
+width:100%; 
+
+}
+
 
 html{
     font-size: 62.5%;
 }
 
-body {
-    overflow-x:hidden;
 
-   
-}
 
 .section-heading{
     font-size: 5rem;
-    font-weight: bold;
+    font-weight: 900;
     text-transform: uppercase;
-    color:999;
+    color:red;
     text-align: center;
     opacity: 0.1;
     text-shadow: 2rem 2rem 4rem #aaa;
@@ -158,20 +160,21 @@ body {
         justify-content: space-evenly;
         align-items: center;
         height: 70%;
+        margin-bottom: 15rem;
       
         }
 
 /*Style customer cards*/
 
 .customer{
-    width: 30rem;
-    height: 40rem;
+    width: 35rem;
+    height: 50rem;
     background-color: rgba(50,231,255,0.2);
     display: flex;
     flex-direction:column;
     align-items: center;
     border-radius: .5rem;
-    padding: 1rem ;
+    padding: 2rem ;
     box-shadow: 1rem 1rem 2rem #ddd,
     -1rem -1rem 2rem #eee;
     transition: box-shadow 0.5s;
@@ -196,7 +199,7 @@ body {
 }
 
 .customer-text{
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     margin: 2.5rem;
     text-align: justify;
 
@@ -236,18 +239,15 @@ height: 100vh;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
-padding: 5rem 0;
+padding: 2rem 0;
 background-color:rgba(50,231,255,0.8) ;
 
 }
 
 .team-member-img{
-    width: 10rem;
-    height: 10rem;
-    object-fit: cover;
-    margin: 2rem 0; 
-    border-radius: 50%;
-    ;
+    width: 100%;
+    border-radius: 0.5rem;
+    
 }
 
 
@@ -258,17 +258,19 @@ background-color:rgba(50,231,255,0.8) ;
     align-items: center;
     height: 70%;
     
+    
 }
 
 .team-member{
     width:35rem;
     background-color: #fffeee;
-    padding: 1rem 1rem 2em 12rem;
+    padding: 1rem 1rem 2em 1rem;
     box-shadow: 1rem 1rem 2rem #ddd, 
     -1rem -1rem 2rem #eee;
-    position: relative;
+    position: relative;   
     opacity: 0.7;
     transition: opacity 0.5s;
+
 }
 
 .team-member:hover{
@@ -286,7 +288,7 @@ background-color:rgba(50,231,255,0.8) ;
 
 .team-member-img{
     width: 100%;
-    border-radius:0.5rem; 
+    border-radius:50; 
 }
 
 .team-member-name{
@@ -308,7 +310,8 @@ background-color:rgba(50,231,255,0.8) ;
 
     .team-member-skills li{
         font-size: 1.5rem;
-        columns: #505050;
+        color: #505050;  
+             
      
     }
 
